# monori

./: .codespellrc  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .sqlfluff  .yamllint.yaml  Makefile  README.md  renovate.json
deploy/: Dockerfile  Dockerfile.back  Dockerfile.dev  Dockerfile.front  Dockerfile.sync  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.yml  nginx.conf
docs/: README.md  accounts.md  api.md  budgeting.md  configuration.md  data-model.md  (+6 more)
server/: export_snapshot.py  migrate.py  pyproject.toml  schema.sql  setup.cfg  verify_parity.py
server/app/: admin.py  auth.py  crypto.py  db.py  deps.py  emails.py  importer.py  ingest.py  main.py  security.py  sync_runner.py  sync_service.py
server/app/connectors/: __init__.py  base.py  fake.py  tbank_playwright.py
server/app/routers/: accounts.py  admin.py  auth_router.py  budgets.py  categories.py  connections.py  export.py  groups.py  imports.py  transactions.py  transfers.py
server/app/workbook/: __init__.py  apply.py  export.py  importer.py  spec.py  template_importer.py
server/migrations/: env.py
server/migrations/versions/: 0001_base.py  0002_accounts.py  0003_account_icon.py  0004_account_color_image.py  0005_bank_connections.py  0006_users.py  0007_per_user_data.py  0008_user_level_connections.py  0009_rehash_transactions_sha256.py  0010_admin_activity.py  0011_email_canonical.py
server/static/: index.html
server/static/assets/: af-Dt_tfWiP.js  am-C-ney0Qv.js  ar-DYmc6b68.js  ar-dz-BKLllvdJ.js  ar-iq-DLHzekcT.js  ar-kw-DWc3-bJL.js  ar-ly-DrxlI4RF.js  ar-ma-C1fPbu2u.js  ar-sa-QiRipgVK.js  ar-tn-pKr3036N.js  az-CPFcE5WE.js  be-Cy_mzUbM.js  bg-DWDj0gE1.js  bi-BgAoZYjL.js  bm-D8wFfGcw.js  bn-DxOukw2y.js  bn-bd-usG0nuAR.js  bo-DE-LuYdT.js  br-632yccpi.js  bs-D6AXwgNy.js  ca-C7Kd11Ic.js  cs-CRWS8HCt.js  cv-DgL9Y_AS.js  cy-D0mj_b6P.js  da-Czxb64vB.js  de-D9MVq766.js  de-at-B9Hrw738.js  de-ch-ByzKJ5_C.js  dv-C6QG56UE.js  el-D4E-voTj.js  en-DIf8_DC_.js  en-au-DoOX4UZV.js  en-ca-BYsKodK6.js  en-gb-CHsrQR3L.js  en-ie-BSs4E8pN.js  en-il-s4lWlujN.js  en-in-B1ctZtN9.js  en-nz-BKK8Gf5S.js  en-sg-DwAB8Kvz.js  en-tt-B5ipyekp.js  (+105 more)
server/tests/: conftest.py  test_api.py  test_api_full.py  test_importer.py
server/tests/integration/: test_accounts.py  test_admin_api.py  test_auth.py  test_auth_users.py  test_budgets.py  test_categories.py  test_connections.py  test_export.py  test_groups.py  test_imports.py  test_serialization.py  test_transactions.py  test_transfers.py  test_workbook_import.py
server/tests/unit/: test_account_validators.py  test_admin.py  test_connection_model.py  test_crypto.py  test_emails.py  test_importer.py  test_ingest.py  test_migration.py  test_security.py  test_serializers.py  test_serving.py  test_sync_runner.py  test_sync_service.py  test_tbank_connector.py  test_workbook_apply.py  test_workbook_importer.py  test_workbook_template_importer.py
(+132 files in other folders)
