[project]
name = "monori-server"
version = "0.1.0"
description = "Monori personal budget server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.14",
    "mypy>=1.13",
    "bandit>=1.8",
    "httpx2>=2.5.0",
    "mutmut>=3.6.0",
    "pip-audit>=2.10.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration test that stands up real dependencies",
]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.12"
files = ["app"]
explicit_package_bases = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.bandit]
exclude_dirs = ["tests"]
