[project]
name = "monori-server"
version = "0.1.0"
description = "Monori personal budget server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "cryptography>=44",
    "pyjwt>=2.9",
    "argon2-cffi>=23",
    "python-multipart>=0.0.9",
    "alembic>=1.18.5",
    "httpx>=0.27",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
connectors = [
    "playwright>=1.40",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.14",
    "mypy>=1.13",
    "bandit>=1.8",
    "httpx2>=2.5.0",
    "mutmut>=3.6.0",
    "pip-audit>=2.10.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration test that stands up real dependencies",
]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.12"
files = ["app"]
explicit_package_bases = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["playwright.*", "openpyxl.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
# B105 flags string literals whose variable name looks password-like. It only
# false-positives here (CSS selectors, a fake session marker); real credentials
# are user-supplied and encrypted, never hardcoded.
skips = ["B105"]
